Fix for exif tooltips being cut off and changed the default order of exif properties to make Camera appear first if supplied.

--- a/src/core/css/panel/panel-sizing.css
+++ b/src/core/css/panel/panel-sizing.css
@@ -20,7 +20,6 @@
 }
 
 .fg-panel-content-inner,
-.fg-panel-info-inner,
 .fg-panel-cart-inner,
 .fg-panel-thumbs-inner {
     pointer-events: auto;
@@ -30,6 +29,8 @@
 
 /* By default collapse and overlay the caption along the bottom on small screens */
 .fg-panel-info-inner {
+    pointer-events: auto;
+    display: flex;
     position: absolute;
     top: unset;
     bottom: 0;
